// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editable text reverts host styles on slate-internal text spans: resolvedValue 1`] = `
.ms-18jqvbb [data-slate-string],
.ms-18jqvbb [data-slate-zero-width] {
  all: revert !important;
}

.ms-1azh6ix {
  margin: 0;
}

.ms-1fa0n4z {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (min-width: 769px) {
  .ms-1r721yj {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1r721yj {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1r721yj {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1l868b8 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1l868b8 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1l868b8 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-19g7itq {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-19g7itq {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-19g7itq {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-32ma74 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-32ma74 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-32ma74 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-smjku0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-smjku0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-smjku0 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}


NodeList [
  <div
    autocapitalize="false"
    autocorrect="false"
    class="ms-18jqvbb"
    contenteditable="false"
    data-slate-editor="true"
    data-slate-node="value"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <p
      class="ms-1azh6ix ms-19xpzf7"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1qp1ks7"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://www.bigcommerce.com/adyen"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-1r721yj"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Adyen
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-oglrrk"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-1f9sy12"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-nrtlmy"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="http://www.authorize.net/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-1l868b8"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Authorize.net
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-u8uh79"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-hrv0h4"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-pxqjj2"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://www.bigcommerce.com/bluesnap/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-19g7itq"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              BlueSnap
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-ir9tkj"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-16qgx5l"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1qpujjz"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-32ma74"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              Checkout.com
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-bkzgbg"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-1hdsugh"
      data-slate-node="element"
    >
      <span
        data-slate-node="text"
      >
        <span
          class="ms-7676sh"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
      <a
        class="ms-1fa0n4z"
        data-slate-inline="true"
        data-slate-node="element"
        href="http://www.cybersource.com/"
        target="_blank"
      >
        <span
          data-slate-node="text"
        >
          <span
            class="ms-smjku0"
            data-slate-leaf="true"
          >
            <span
              data-slate-string="true"
            >
              CyberSource Direct
            </span>
          </span>
        </span>
      </a>
      <span
        data-slate-node="text"
      >
        <span
          class="ms-1sy3y8r"
          data-slate-leaf="true"
        >
          <span
            data-slate-length="0"
            data-slate-zero-width="z"
          >
            ﻿
          </span>
        </span>
      </span>
    </p>
  </div>,
]
`;

exports[`editable text reverts host styles on slate-internal text spans: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "Swatch": [
        {
          "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
          "value": {
            "__typename": "Swatch",
            "hue": 238,
            "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
            "lightness": 49,
            "saturation": 87,
          },
        },
      ],
      "Typography": [
        {
          "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
          "value": {
            "__typename": "Typography",
            "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
            "name": "Body",
            "style": [
              {
                "deviceId": "desktop",
                "value": {
                  "color": null,
                  "fontFamily": "Lato",
                  "fontSize": {
                    "unit": "px",
                    "value": 16,
                  },
                  "fontWeight": null,
                  "italic": null,
                  "letterSpacing": null,
                  "lineHeight": null,
                  "strikethrough": null,
                  "textAlign": null,
                  "underline": null,
                  "uppercase": null,
                },
              },
            ],
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "descendants": [
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Adyen",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/adyen",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Authorize.net",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.authorize.net/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "BlueSnap",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/bluesnap/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Checkout.com",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "CyberSource Direct",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.cybersource.com/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "key": "c438a1d3-fee2-4eb4-b49b-f1856c12de42",
                  "type": "makeswift::controls::rich-text-v2",
                  "version": 2,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::block placeholder when empty: resolvedValue 1`] = `
.ms-1uc9xwq {
  display: inline-block;
  width: 0;
  max-width: 100%;
  white-space: nowrap;
  opacity: 0.333;
  vertical-align: text-top;
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <span
      class="ms-1uc9xwq"
    >
      Write some text...
    </span>
  </div>,
]
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::block placeholder when empty: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::inline placeholder when empty: resolvedValue 1`] = `
.ms-1uc9xwq {
  display: inline-block;
  width: 0;
  max-width: 100%;
  white-space: nowrap;
  opacity: 0.333;
  vertical-align: text-top;
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <span
      class="ms-1uc9xwq"
    >
      Write some text...
    </span>
  </div>,
]
`;

exports[`renders a makeswift::controls::rich-text-v2::mode::inline placeholder when empty: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {},
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": undefined,
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;

exports[`renders provided text content: resolvedValue 1`] = `
.ms-1azh6ix {
  margin: 0;
}

.ms-1fa0n4z {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (min-width: 769px) {
  .ms-n781qb {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-n781qb {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-n781qb {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1fauesv {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1fauesv {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1fauesv {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-bief52 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-bief52 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-bief52 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-1h9dqf4 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-1h9dqf4 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-1h9dqf4 {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 769px) {
  .ms-w85jpg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (min-width: 576px) and (max-width: 768px) {
  .ms-w85jpg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}

@media only screen and (max-width: 575px) {
  .ms-w85jpg {
    color: hsla(238, 87%, 49%, 1);
    font-family: Lato;
    font-size: 16px;
  }
}


NodeList [
  <div
    style="position: relative; white-space: pre-wrap; word-wrap: break-word;"
  >
    <p
      class="ms-1azh6ix ms-1vl0m1z"
    >
      <span
        class="ms-18v3n4"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://www.bigcommerce.com/adyen"
        target="_blank"
      >
        <span
          class="ms-n781qb"
        >
          Adyen
        </span>
      </a>
      <span
        class="ms-yx9ut1"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-7sp1fb"
    >
      <span
        class="ms-x2jgjk"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="http://www.authorize.net/"
        target="_blank"
      >
        <span
          class="ms-1fauesv"
        >
          Authorize.net
        </span>
      </a>
      <span
        class="ms-1sznzvr"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-yfx664"
    >
      <span
        class="ms-iu2st7"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://www.bigcommerce.com/bluesnap/"
        target="_blank"
      >
        <span
          class="ms-bief52"
        >
          BlueSnap
        </span>
      </a>
      <span
        class="ms-1m7n7l1"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-38a7ff"
    >
      <span
        class="ms-z755i9"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/"
        target="_blank"
      >
        <span
          class="ms-1h9dqf4"
        >
          Checkout.com
        </span>
      </a>
      <span
        class="ms-12lsqie"
      >
        ﻿
      </span>
    </p>
    <p
      class="ms-1azh6ix ms-17mp2tr"
    >
      <span
        class="ms-15abrgq"
      >
        ﻿
      </span>
      <a
        class="ms-1fa0n4z"
        href="http://www.cybersource.com/"
        target="_blank"
      >
        <span
          class="ms-w85jpg"
        >
          CyberSource Direct
        </span>
      </a>
      <span
        class="ms-gkh62q"
      >
        ﻿
      </span>
    </p>
  </div>,
]
`;

exports[`renders provided text content: snapshot 1`] = `
{
  "cacheData": {
    "apiResources": {
      "Swatch": [
        {
          "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
          "value": {
            "__typename": "Swatch",
            "hue": 238,
            "id": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
            "lightness": 49,
            "saturation": 87,
          },
        },
      ],
      "Typography": [
        {
          "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
          "value": {
            "__typename": "Typography",
            "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
            "name": "Body",
            "style": [
              {
                "deviceId": "desktop",
                "value": {
                  "color": null,
                  "fontFamily": "Lato",
                  "fontSize": {
                    "unit": "px",
                    "value": 16,
                  },
                  "fontWeight": null,
                  "italic": null,
                  "letterSpacing": null,
                  "lineHeight": null,
                  "strikethrough": null,
                  "textAlign": null,
                  "underline": null,
                  "uppercase": null,
                },
              },
            ],
          },
        },
      ],
    },
    "localizedResourcesMap": {},
  },
  "document": {
    "data": {
      "key": "00000000-0000-0000-0000-000000000000",
      "props": {
        "children": {
          "columns": [
            {
              "deviceId": "desktop",
              "value": {
                "count": 12,
                "spans": [
                  [
                    12,
                  ],
                ],
              },
            },
          ],
          "elements": [
            {
              "key": "11111111-1111-1111-1111-111111111111",
              "props": {
                "propKey": {
                  "descendants": [
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Adyen",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/adyen",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Authorize.net",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.authorize.net/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "BlueSnap",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://www.bigcommerce.com/bluesnap/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "Checkout.com",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "https://support.bigcommerce.com/s/article/Connecting-with-Checkoutcom/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                    {
                      "children": [
                        {
                          "text": "",
                        },
                        {
                          "children": [
                            {
                              "text": "CyberSource Direct",
                              "typography": {
                                "id": "VHlwb2dyYXBoeTowNGI4OTZlMC0wZWEyLTRkMTMtYmU3ZS0xYmY1M2VmMjBiZjc=",
                                "style": [
                                  {
                                    "deviceId": "desktop",
                                    "value": {
                                      "color": {
                                        "alpha": 1,
                                        "swatchId": "U3dhdGNoOmJkODYxMWM5LTNiZjItNDM3MS1iMmU4LTBmMmNlMDZjNDE1OA==",
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          ],
                          "link": {
                            "payload": {
                              "openInNewTab": true,
                              "url": "http://www.cybersource.com/",
                            },
                            "type": "OPEN_URL",
                          },
                          "type": "link",
                        },
                        {
                          "text": "",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "key": "c438a1d3-fee2-4eb4-b49b-f1856c12de42",
                  "type": "makeswift::controls::rich-text-v2",
                  "version": 2,
                },
              },
              "type": "TestComponent",
            },
          ],
        },
      },
      "type": "./components/Root/index.js",
    },
    "fonts": [],
    "id": "test-page-id",
    "locale": null,
    "localizedPages": [],
    "meta": {},
    "seo": {},
    "site": {
      "id": "test-site-id",
    },
    "snippets": [],
  },
}
`;
